--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "homepage": "https://github.com/muskanthapa2000/node_js_with_type_script#readme",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
+    "@types/sequelize": "^4.28.20",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@types/express": "^5.0.0",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "pg": "^8.13.0",
+    "sequelize": "^6.37.3"
   }
 }
